--- a/code/ArduRemote/AndroidManifest.xml
+++ b/code/ArduRemote/AndroidManifest.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.grauonline.arduremote"
-    android:versionCode="12"
-    android:versionName="2.1" >
+    package="de.grauonline.arduremote">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="">
         <activity
             android:name="de.grauonline.arduremote.ArduRemoteActivity"
             android:label="@string/app_name" >
