Add missing references to jcenter/google repos. Remove fullbackup from AndroidManifest.xml for now, it requires more XML and is not really relevant at the moment.

--- a/code/ArduRemote/build.gradle
+++ b/code/ArduRemote/build.gradle
@@ -9,6 +9,19 @@ buildscript {
     }
 }
 
+allprojects {
+    buildscript {
+        repositories {
+            jcenter()
+        }
+    }
+
+    repositories {
+        jcenter()
+        google()
+    }
+}
+
 apply plugin: 'com.android.application'
 
 dependencies {
