--- a/code/ArduRemote/AndroidManifest.xml
+++ b/code/ArduRemote/AndroidManifest.xml
@@ -8,11 +8,9 @@
 
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="">
+        android:theme="@style/AppTheme">
         <activity
             android:name="de.grauonline.arduremote.ArduRemoteActivity"
             android:label="@string/app_name" >
